--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
+    "flowbite": "^3.1.2",
     "nexgenlabs": "file:",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
